[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shdw-node-stats"
version = "0.1.0"
authors = [{ name = "AnyNodes", email = "anynodes@outlook.com" }]
description = "A tool to fetch and record ShadowDrive node statistics from an API and save them to a CSV file."
readme = "README.md"
license = { file="LICENSE" }
keywords = ["API", "ShadowDrive", "statistics", "CSV"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.1"
]
urls = {
    "Homepage": "https://github.com/AnyNodes/shdw-node-stats",
    "Bug Tracker": "https://github.com/AnyNodes/shdw-node-stats/issues",
}

[project.scripts]
NodeStats = "NodeStats.py"

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov"
]

[tool.setuptools.dynamic]
requires-python = ">=3.6"
